--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <div class="logo"></div>
       <div class="header__links">
-        <a href="#" class="header__link header__link_lang_active">Ru</a>
+        <a href="#" class="header__link header__link_active">Ru</a>
         <a href="#" class="header__link">En</a>
       </div>
     </header>
@@ -19,8 +19,8 @@
 
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-        <div class="lead__image"></div>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="маршрут от Владивостока до Москвы">
         <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
@@ -60,10 +60,10 @@
                 <a href="http://park-kosa.ru" target="_blank" class="places__link">park-kosa.ru</a>
             </div>
             <img src="./images/place-kosa.jpg" alt="куршская коса" class="places__image">
-            <article class="places__text">
+            <div class="places__text">
               <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
               <p class="places__paragraph">На этом Калининградская область не заканчивается.Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
-            </article>
+            </div>
         </div>
         <div class="places__place">
             <h2 class="places__title">Кольский</h2>
@@ -72,12 +72,12 @@
                 <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="places__link">National Geographic</a>
             </div>
             <img src="./images/place-kolsky.jpg" alt="Кольский" class="places__image">
-            <article class="places__text">
+            <div class="places__text">
               <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
               <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                 в Мурманск.</p>
-            </article>
+            </div>
         </div>
         <div class="places__place">
             <h2 class="places__title">Алтай</h2>
@@ -86,11 +86,11 @@
                 <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank" class="places__link">YouTube</a>
             </div>
             <img src="./images/place-altai.jpg" alt="Алтай" class="places__image">
-            <article class="places__text">
+            <div class="places__text">
               <p class="places__paragraph">Алтай — одно из красивейших мест в России.
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
               <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
-            </article>
+            </div>
         </div>
         <div class="places__place">
             <h2 class="places__title">Зимний Байкал</h2>
@@ -99,12 +99,12 @@
                 <a href="https://vk.com/baikalmile" target="_blank" class="places__link">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/place-winter-baikal.jpg" alt="Зимний байкал" class="places__image">
-            <article class="places__text">
+            <div class="places__text">
               <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро  
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
               <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                 к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-            </article>
+            </div>
         </div>
         <div class="places__place">
             <h2 class="places__title">Карелия</h2>
@@ -113,19 +113,20 @@
                 <a href="http://vodlozero.ru" target="_blank" class="places__link">http://vodlozero.ru/</a>
             </div>
             <img src="./images/place-karelia.jpg" alt="Карелия" class="places__image">
-            <article class="places__text">
+            <div class="places__text">
               <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.   
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья  
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-              <p class="places__text"></p>
-            </article>
+            </div>
         </div>
     </section>
     
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
-     <h2 class="cover__title">До Байкала «на собаках»</h2>
-     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    <section class="cover">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+       <h2 class="cover__title">До Байкала «на собаках»</h2>
+       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </a>
+    </section>
 </main>
 
 <footer class="footer">
